fix(ui): Update lại tính năng restore